Cập nhật chức năng Register

--- a/src/main/resources/org/example/healtech/view/RegisterView.fxml
+++ b/src/main/resources/org/example/healtech/view/RegisterView.fxml
@@ -19,6 +19,9 @@
                         <Label styleClass="form-title" text="ĐĂNG KÝ"/>
                         <TextField fx:id="fullnameField" promptText="Họ và tên" styleClass="input-field"/>
                         <TextField fx:id="emailField" promptText="Email" styleClass="input-field"/>
+                        <TextField fx:id="phoneField" promptText="Số điện thoại" styleClass="input-field"/>
+                        <ComboBox fx:id="positionBox" promptText="Chức vụ" styleClass="input-field"/>
+                        <TextField fx:id="departmentField" promptText="Chuyên khoa (nếu có)" styleClass="input-field"/>
                         <PasswordField fx:id="passwordField" promptText="Mật khẩu" styleClass="input-field"/>
                         <PasswordField fx:id="confirmPasswordField" promptText="Nhập lại mật khẩu" styleClass="input-field"/>
                         <Button text="Tạo tài khoản" styleClass="primary-btn" onAction="#handleRegister"/>
